# HSLUAgentsCourse

./: .env.example  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  verify_setup.py
examples/: customer_support.py  research_assistant.py
grant_assistants/: bp_assistant_full.py  bp_assistant_mcp.py  bp_assistant_orc.py  bp_assistant_seq.py  bp_writing_assistant.py  grant_fit_simple_agent.py
grant_assistants/sample-docs/: idea.txt
grant_assistants/sample-docs/result.md/: narrative.md  novelty_report.json  outline.json  run_log.json  strategy_note.json
sequential_writing_assistant/: grant_writer.py
simple-agent-project-scoring/sample-docs/: grant.txt  idea_bad.txt  idea_bad_fit_result.json  idea_good.txt  idea_good_fit_result.json
src/: __init__.py
src/module1_prompt_chaining/: __init__.py  basic_chain.py
src/module2_tool_use/: __init__.py  function_calling.py
src/module3_web_search/: __init__.py  web_agent.py
src/module4_agent_orchestration/: __init__.py  orchestrator.py
src/module5_advanced_agents/: __init__.py  multi_agent.py
src/utils/: __init__.py  config.py  logger.py
